2023-07-11  <daniel.diaz@univ-paris1.fr>

	* fix for x >> y with too large y and x negative

2023-07-09  <daniel.diaz@univ-paris1.fr>

	* add built-in predicate countall/2
	* modify format/2-3: now C printf format must start by ~%
	  (backward compatibility issue)

2023-07-06  <daniel.diaz@univ-paris1.fr>

	* improve other arithmetic error detection (in both integer and float functions)
	* fix issue #47: add integer overflow detection
	* fix issue #48: error in min/2 and (^)/2.

2023-07-03  <daniel.diaz@univ-paris1.fr>

	* fix domain_error in write_term
	* modify min/2 and max/2: in case of equality between an integer and a float,
	  return the float
	* fix issue #46: write options: wrong precedence
	* fix issue #50: top-level: flush_output after each answer display
	* improve top-level: write a space to separate argmunets of compound terms
	* fix pl2wam --susp-warn (deactivated wrongly after a set_prolog_flag/2 directive)

2023-06-30  <daniel.diaz@univ-paris1.fr>

	* fix issue #45: improve call_nth/2 with a add new '$call_c' option ret(RetVar)

2023-06-28  <daniel.diaz@univ-paris1.fr>

	* add/modify Prolog flags: show_banner, show_information
	* remove default consult summary statistics
	  (to display set show_information=informational)
	* fix issue #44: misleading error for inexistent file in gprolog --consult-file

2023-06-26  <daniel.diaz@univ-paris1.fr>

	* fix issue #43: add call_nth/2 built-in (part of the  Prolog prologue)
	* add built-in nb_setarg/3 (special case of setarg/4)
	* fix issue #26: missing int_overflow for succ/2

2023-06-24  <daniel.diaz@univ-paris1.fr>

	* fix issue #41: ISO requires: round(4.5) = 5 and round(-4.5) = -4
	* fix issue #40: new builts-in predicates: current_evaluable/1 and evaluable_property/2

2023-06-20  <daniel.diaz@univ-paris1.fr>

	* replace previous pragma directives by the unique compiler_mode/1 directive.

 2023-06-15  <daniel.diaz@univ-paris1.fr>

	* rename gplc/pl2wam --pre-load option simply as --include