@@ -233,4 +233,3 @@ My_Disp(PlTerm term, PlTerm t1)
 }
 
 #endif
-
